# timesheet-py

./: .dockerignore  .gitignore  Dockerfile  README.md  install.py  main.py  pyproject.toml  serve.py
.nicegui/: storage-user-1c4e94cc-58ec-46a3-b1b2-9d954f3ffc37.json
data/: db.sqlite3  db.sqlite3-shm  db.sqlite3-wal
src/timesheet_py/: __main__.py  api.py  auth.py  models.py  orm.py
src/timesheet_py/components/: header.py  timesheet_editor.py
src/timesheet_py/migrations/: 0001_initial.py  0002_rename_employee_id_to_code.py  0003_add_apikey.py  0004_add_api_access_flag.py
src/timesheet_py/routes/: __init__.py  admin.py  install.py  timesheet.py  user.py
src/timesheet_py/routes/admin/: __init__.py  activities.py  projects.py  users.py
